# real-talk

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.mac.in  requirements.mac.txt
src/: audio.py  audio_capture.py  inference_cli.py  models.py  voice.py
src/audio/: capture.py  playback.py
src/core/: framework.py  monitor.py
src/models/: models.py  vocos_onnx.py
src/training/: distill.py  load_rvc.py
src/utils/: virtual_audio.py
src/web/: app.py
src/web/static/: index.html
tests/: test_pipeline.py
